@@ -1,3 +1,6 @@
+2010-01-11 Paul Millar <paul.millar@desy.de>
+  Add support for relative paths in lookup element
+
 2008-10-02 Paul Millar <paul.millar@desy.de>
   Make depth a parameter to allow caller to override value.
   Switch to using the path-stack and depth instead of rel-path for user-elements.
